--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -715,8 +715,9 @@ sup {
 .bg_grey-s {
     background-color: #E5EEE7;
 }
-.w_184px-s {
+.w_h_184px_x_63px-s{
     width: 184px;
+    height: 63px;
 }
 
 /*notification button*/
@@ -780,8 +781,8 @@ input:checked+.slider:before {
     border: 3px solid #006400;
 }
 .logo_text-s {
-    top: 31%;
-    left: 42px;
+    top: 37%;
+    left: 39px;
 }
 .fs_18px-s {
     font-size: 18px;
@@ -920,6 +921,19 @@ input:checked+.slider:before {
 
 .fs_12px-s{
     font-size: 12px;
+}
+
+.fs_14px-s{
+    font-size: 14px;
+}
+
+.code_border-s {
+    border: 1px solid #E5EEE7;
+    border-radius: 5px;
+    border-bottom: 2px solid #006400;
+    width: 77px;
+    height: 77px;
+    background-color: #E5EEE7;
 }
 
 /*notification button end*/
