--- a/assets/main.css
+++ b/assets/main.css
@@ -32,7 +32,7 @@
 }
 
 .navbar-nav li {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     color: #212121;
     margin-left: 5rem;
 }
@@ -41,6 +41,10 @@
     margin-right: 1rem;
     font-size: 1.6rem;
     font-weight: 500;
+}
+
+.td_none-s {
+    text-decoration: none;
 }
 
 .social-part {
@@ -619,7 +623,6 @@ sup {
 
 .myprofile_text {
     font-family: Roboto;
-    margin-top: 5rem;
 }
 
 .myprofile_text h1 {
