--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -687,9 +687,9 @@ sup {
 }
 
 .message_count-s {
-    width: 49%;
+    width: 31px;
     background-color: green;
-    height: 34%;
+    height: 31px;
     border-radius: 20px;
 }
 
@@ -1003,6 +1003,10 @@ input:checked+.slider:before {
 .br_left_10px-s {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
+}
+
+.br_5px-s {
+    border-radius: 5px;
 }
 
 .h_50px-s {
