--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -780,10 +780,16 @@ sup {
     height: 63px;
 }
 
+.br_green_on_hover-s:active ,
 .br_green_on_hover-s:hover {
     border: 2px solid #006400;
     color: black !important;
 }
+
+/* .br_green_on_hover-s:active{
+    border: 2px solid #006400;
+    color: black !important;
+} */
 
 .fg_green-s {
     color: #006400;
@@ -803,7 +809,7 @@ sup {
 }
 
 .card_ticker-s {
-    left: -14px;
+    left: -15px;
     top: 30px;
 }
 
@@ -973,6 +979,7 @@ input:checked+.slider:before {
         bottom: 0;
         left: 57%;
     }
+
 }
 
 .focus_none-s:focus {
@@ -1284,6 +1291,32 @@ output:after {
     right: 16px;
     top: 18px;
     z-index: 1;
+}
+
+.font_family_roboto-s{
+    font-family: roboto;
+}
+
+.fs_11px-s{
+    font-size: 11px;
+}
+
+.outline_none-s:focus{
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+
+@media screen and (max-width:425px) {
+    .chat_button-s{
+        right: -24px;
+        bottom: -33px;
+    }
+
+    .wrapper{
+        right: 11px;
+        bottom: 97px;
+    }
 }
 /*notification button end*/
 
