--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,13 +156,13 @@
 
 .rating_text {
     color: #212121 !important;
-    font-size: 1.8rem !important;
+    /* font-size: 1.8rem !important; */
     word-spacing: 0.5rem;
 }
 
 .rating_textt {
     color: #ffffff !important;
-    font-size: 1.8rem !important;
+    font-size: 1.125rem !important;
     word-spacing: 0.5rem;
     float: right;
     font-weight: 600;
@@ -760,6 +760,11 @@ sup {
 /*
 
 /* ----- Chat - end ---- */
+
+.player_position_button-s {
+    width: 223px !important;
+    font-size: 18px !important;
+}
 
 
 /* ----- USMAN WORK - END ----- */
