--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1082,7 +1082,7 @@ input:checked+.slider:before {
 }
 
 .fs_32px-s {
-    font-size: 32px;
+    font-size: 32px !important;
 }
 
 .fs_12px-s {
@@ -1153,7 +1153,7 @@ input:checked+.slider:before {
     height: 20px;
     width: 20px;
     margin-top: -9px;
-    background-color: green;
+    background-color: #006400;
     z-index: 100;
 }
 
@@ -1165,7 +1165,7 @@ input:checked+.slider:before {
     width: 100%;
     height: 2px;
     cursor: pointer;
-    background: green;
+    background: #006400;
     border-radius: 5px;
 }
 
@@ -1203,7 +1203,7 @@ output:after {
     background-position: right top;
     background-blend-mode: overlay;
     background-size: 79%;
-    opacity: .4;
+    /* opacity: .4; */
 }
 
 .br_up_left_right_10px-s {
@@ -1322,6 +1322,30 @@ output:after {
         right: 11px;
         bottom: 97px;
     }
+}
+
+.filter_location-s{
+    background-color: #006400;
+    background-image: url("../images/map_footbal.png");
+    background-repeat: no-repeat;
+    height: 532px;
+    max-width: 326px;
+    border-radius: 15px;
+}
+
+.location_card-s{
+    bottom: 2%;
+    border-radius: 1.2rem;
+}
+
+
+.fg_white-s{
+    color: white !important;
+}
+
+.heart_position-s{
+    top: 0 ;
+    right: 0 ;
 }
 /*notification button end*/
 
