--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,7 +124,6 @@
     background: #ffffff 0% 0% no-repeat padding-box;
     box-shadow: 0px 0px 30px #00000017;
     border-radius: 10px;
-    color: #212121;
     font-size: 1.2rem;
     width: 11.16rem;
     height: 4.3rem;
@@ -760,6 +759,10 @@ sup {
     color: #00000017;
 }
 
+.ft_11px-s {
+    font-size: 11px;
+}
+
 
 /*
 
@@ -768,6 +771,20 @@ sup {
 .player_position_button-s {
     width: 223px !important;
     font-size: 18px !important;
+    color: #E5EEE7;
+}
+
+.player_position_button-s:hover {
+    width: 223px !important;
+    font-size: 18px !important;
+    color: #212121;
+    border: 2px solid green;
+}
+
+@media screen and (max-width: 425px) {
+    .mb_25px-s {
+        margin-bottom: 15px;
+    }
 }
 
 
