--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,7 +156,7 @@
 .rating_text {
     color: #212121 !important;
     /* font-size: 1.8rem !important; */
-    word-spacing: 0.5rem;
+    /* word-spacing: 0.5rem; */
 }
 
 .rating_textt {
